--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .banner{
     text-align: center;
     letter-spacing: 10px;
-    font-size: 36pt;
+    font-size: 36px;
 }
 .para{
     text-align: center;
