--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     letter-spacing: 10px;
     font-size: 36px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 .para{
     text-align: center;
