--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
     font-size: 36px;
     margin-top: 50px;
     margin-bottom: 50px;
+    font-family: "Lucida Console", monospace;
 }
 .para{
     text-align: center;
