--- a/main.css
+++ b/main.css
@@ -5,6 +5,8 @@
     margin-top: 50px;
     margin-bottom: 50px;
     font-family: "Lucida Console", monospace;
+    text-decoration: blink;
+    
 }
 .para{
     text-align: center;
