--- a/main.css
+++ b/main.css
@@ -29,11 +29,11 @@ p{
     padding: 50px;
     margin-left: 500px;
     margin-right: 50px;
-    margin-top: -500px;
+    margin-top: -200px;
 }
 
 .profilepic {
     height: 350px;
     width: 230px;
-    padding: 50px;
+    margin-left: 100px;
 }
