--- a/main.css
+++ b/main.css
@@ -37,8 +37,9 @@ p{
 }
 
 .profilepic {
-    height: 350px;
-    width: 230px;
+    height: 500px;
+    width: 333px;
     margin-left: 100px;
     margin-top: 20px;
+    border-radius: 15px;
 }
