--- a/main.css
+++ b/main.css
@@ -42,9 +42,9 @@ p{
 }
 
 .profilepic {
-    height: 37.5%;
-    width: 25%;
-    margin-left: 100px;
-    margin-top: 20px;
+    height: 30%;
+    width: 20%;
+    margin-left: 10%;
+    margin-top: 10%;
     border-radius: 15px;
 }
