--- a/main.css
+++ b/main.css
@@ -25,11 +25,11 @@ a:hover {
 
 nav {
     font-family: Verdana;
-    text-align: center;
-    padding: 20px;
+    padding: 5%;
     justify-content: space-between;
     position: fixed;
     background-color:bisque;
+    text-align: center;
 }
 
 p{
@@ -38,8 +38,7 @@ p{
     padding: 50px;
     margin-left: 30%;
     margin-right: 5%;
-    position: relative;
-    top: -400px;
+    margin-top: 5%;
 }
 
 .profilepic {
