--- a/main.css
+++ b/main.css
@@ -28,8 +28,12 @@ nav {
     padding: 5%;
     justify-content: space-between;
     position: fixed;
-    background-color:bisque;
     text-align: center;
+}
+
+.bar {
+    width: 100%;
+    background-color: bisque;
 }
 
 p{
