--- a/main.css
+++ b/main.css
@@ -25,10 +25,10 @@ a:hover {
 
 nav {
     font-family: Verdana;
-    padding: 5%;
     justify-content: space-between;
     position: fixed;
-    text-align: center;
+    left: 50%;
+    top: 5%;
 }
 
 .bar {
