--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: -webkit-linear-gradient(top, bisque 100px, pink 100px, powderblue 100px, plum, darkseagreen, sandybrown);
+    background: -webkit-linear-gradient(top, bisque , pink , powderblue , plum, darkseagreen, sandybrown);
 }
 
 a {
