--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ p{
     height: 30%;
     width: 20%;
     margin-left: 5%;
-    margin-top: 13%;
+    /* margin-top: 13%; */
     border-radius: 15px;
     float: left;
 }
