--- a/main.css
+++ b/main.css
@@ -46,10 +46,10 @@ a:hover {
 p{
     font-family: Verdana;
     font-size: 110%;
-    padding: 10%;
-    margin-left: 30%;
-    margin-right: 5%;
-    margin-top: 5%;
+    /* padding: 10%; */
+    /* margin-left: 30%;
+    margin-right: 5%; */
+    /* margin-top: 5%; */
 }
 
 .profilepic {
