--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ p{
 .profilepic {
     height: 30%;
     width: 20%;
+    padding: 5%;
     /* margin-left: 5%; */
     /* margin-top: 13%; */
     border-radius: 15px;
