--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ a:hover {
 p{
     font-family: Verdana;
     font-size: 110%;
-    /* padding: 10%; */
+    padding: 5%;
     /* margin-left: 30%;
     margin-right: 5%; */
     /* margin-top: 5%; */
@@ -56,7 +56,7 @@ p{
     height: 30%;
     width: 20%;
     padding: 5%;
-    margin-top: 10%;
+    margin-top: 13%;
     border-radius: 15px;
     float: left;
 }
