--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ p{
     padding: 5%;
     /* margin-left: 30%;
     margin-right: 5%; */
-    /* margin-top: 5%; */
+    margin-top: 13%;
 }
 
 .profilepic {
