--- a/main.css
+++ b/main.css
@@ -54,8 +54,13 @@ p{
     height: 30%;
     width: 20%;
     padding: 5%;
-    margin-top: 13%;
+    margin-top: 17%;
     border-radius: 85px;
     float: left;
+}
+
+.workpic {
+    height: 20%;
+    width: 20%;
 }
 
