--- a/main.css
+++ b/main.css
@@ -35,7 +35,14 @@ a:hover {
     background-color: bisque;
 }
 
-/* text */ 
+/* text & images */ 
+
+p{
+    font-family: Verdana;
+    font-size: 110%;
+    padding: 5%;
+    margin-top: 25%;
+}
 
 .section_header {
     font-size: 150%;
@@ -43,18 +50,11 @@ a:hover {
     color: ivory;
 }
 
-p{
-    font-family: Verdana;
-    font-size: 110%;
-    padding: 5%;
-    margin-top: 13%;
-}
-
 .profilepic {
     height: 30%;
     width: 20%;
     padding: 5%;
-    margin-top: 25%;
+    margin-top: 13%;
     border-radius: 85px;
     float: left;
 }
@@ -62,5 +62,8 @@ p{
 .workpic {
     height: 20%;
     width: 20%;
+    padding: 5%;
+    float: left;
+
 }
 
