--- a/main.css
+++ b/main.css
@@ -60,8 +60,8 @@ p{
 }
 
 .workpic {
-    height: 20%;
-    width: 10%;
+    height: 30%;
+    /* width: 10%; */
     padding: 5%;
     margin-top: 13%;
     /* float: left; */
