--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ p{
 .profilepic {
     height: 30%;
     width: 20%;
-    padding: 5%;
+    /* padding: 5%; */
     /* margin-top: 13%; */
     border-radius: 85px;
     float: left;
