--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ p{
     font-family: Verdana;
     font-size: 110%;
     padding: 5%;
-    /* margin-top: 20%; */
+    margin-top: 13%;
 }
 
 .section_header {
