--- a/main.css
+++ b/main.css
@@ -59,11 +59,11 @@ p{
     float: left;
 }
 
-/* .workpic {
+.workpic {
     height: 30%;
     width: 20%;
-    padding: 5%;
-    margin-top: 13%;
+    /* padding: 5%; */
+    /* margin-top: 13%; */
     float: left;
-} */
+}
 
