--- a/main.css
+++ b/main.css
@@ -62,8 +62,8 @@ p{
 .workpic {
     height: 30%;
     width: 20%;
-    /* padding: 5%; */
-    /* margin-top: 13%; */
+    padding: 5%;
+    margin-top: 13%;
     float: left;
 }
 
