--- a/main.css
+++ b/main.css
@@ -56,7 +56,8 @@ p{
     padding: 5%;
     margin-top: 13%;
     border-radius: 85px;
-    float: left;
+    /* float: left; */
+    display: inline-block;
 }
 
 .workpic {
@@ -64,7 +65,8 @@ p{
     width: 20%;
     padding: 5%;
     margin-top: 13%;
-    float: left;
-    margin-left: -30%;
+    /* float: left; */
+    display: inline-block;
+    /* margin-left: -30%; */
 }
 
