--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ p{
     font-family: Verdana;
     font-size: 110%;
     padding: 5%;
-    margin-top: 13%;
+    /* margin-top: 13%; */
 }
 
 .section_header {
@@ -56,7 +56,7 @@ p{
     height: 30%;
     width: 20%;
     padding: 5%;
-    margin-top: 13%;
+    /* margin-top: 13%; */
     border-radius: 85px; 
     float: left;
 }
@@ -65,7 +65,7 @@ p{
     height: 30%;
     width: 20%;
     padding: 5%;
-    margin-top: 13%;
+    /* margin-top: 13%; */
     float: left;
 }
 
