--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ p{
     height: 30%;
     width: 20%;
     padding: 5%;
-    /* margin-top: 13%; */
+    margin-top: 13%;
     border-radius: 85px; 
     float: left;
 }
@@ -65,7 +65,7 @@ p{
     height: 30%;
     width: 20%;
     padding: 5%;
-    /* margin-top: 13%; */
+    margin-top: 13%;
     float: left;
 }
 
