--- a/main.css
+++ b/main.css
@@ -17,7 +17,28 @@ body {
 #name { font-size: 1000%;}
 #subname { font-size: 200%;}
 
-
+.arrow::before {
+    animation: bounce 1s ease infinite;
+    bottom: 2rem;
+    color: whitesmoke;
+    content: '╲╱';
+    font-size: 2rem;
+    height: 4rem;
+    left: 50%;
+    letter-spacing: -1px;
+    line-height: 4rem;
+    margin-left: -3rem;
+    opacity: 0.8;
+    position: absolute;
+    text-align: center;
+    width: 6rem;
+  }
+  
+  @keyframes bounce {
+    50% {
+      transform: translateY(-50%);
+    }
+  }
 /* navigation bar */
 nav {
     font-family: Verdana;
