--- a/main.css
+++ b/main.css
@@ -19,19 +19,19 @@ body {
 
 .arrow::before {
     animation: bounce 1s ease infinite;
-    bottom: 2rem;
-    color: whitesmoke;
+    /* bottom: 2rem; */
+    color: black;
     content: '╲╱';
-    font-size: 2rem;
-    height: 4rem;
-    left: 50%;
+    /* font-size: 2rem; */
+    /* height: 4rem; */
+    /* left: 50%; */
     letter-spacing: -1px;
-    line-height: 4rem;
-    margin-left: -3rem;
+    /* line-height: 4rem; */
+    /* margin-left: -3rem; */
     opacity: 0.8;
     position: absolute;
     text-align: center;
-    width: 6rem;
+    /* width: 6rem; */
   }
   
   @keyframes bounce {
