--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
     /* bottom: 2rem; */
     color: black;
     content: '╲╱';
-    /* font-size: 2rem; */
+    font-size: 2rem;
     /* height: 4rem; */
     /* left: 50%; */
     letter-spacing: -1px;
