--- a/main.css
+++ b/main.css
@@ -17,20 +17,26 @@ body {
 #name { font-size: 1000%;}
 #subname { font-size: 200%;}
 
+.arrow {
+    font-family: Oswald;
+    opacity: 0.8;
+    text-align: center;
+}
+
 .arrow::before {
-    animation: bounce 1s ease infinite;
-    /* bottom: 2rem; */
-    color: black;
     content: '╲╱';
+    color: black;
+    animation: bounce 1s ease infinite;
+
+    /* bottom: 2rem; */
     font-size: 2rem;
     /* height: 4rem; */
     /* left: 50%; */
     letter-spacing: -1px;
     /* line-height: 4rem; */
     /* margin-left: -3rem; */
-    opacity: 0.8;
     position: absolute;
-    text-align: center;
+    /* text-align: center; */
     /* width: 6rem; */
   }
   
