--- a/main.css
+++ b/main.css
@@ -27,11 +27,11 @@ body {
     content: '╲╱';
     color: black;
     animation: bounce 1s ease infinite;
+    left: 50%;
 
     /* bottom: 2rem; */
     font-size: 2rem;
     /* height: 4rem; */
-    /* left: 50%; */
     letter-spacing: -1px;
     /* line-height: 4rem; */
     /* margin-left: -3rem; */
