--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ body {
     content: '╲╱';
     color: black;
     animation: bounce 1s ease infinite;
-    left: 50%;
+    /* left: 50%; */
 
     /* bottom: 2rem; */
     font-size: 2rem;
