--- a/main.css
+++ b/main.css
@@ -20,8 +20,7 @@ body {
 .arrow {
     font-family: Oswald;
     opacity: 0.8;
-    /* text-align: center; */
-    left: 50%;
+    text-align: center;
 }
 
 .arrow::before {
