--- a/main.css
+++ b/main.css
@@ -24,18 +24,19 @@ body {
 }
 
 .arrow::before {
-    /* content: '╲╱'; */
+    content: '╲╱';
     color: black;
     animation: bounce 1s ease infinite;
+    text-align: center;
     /* left: 50%; */
 
     /* bottom: 2rem; */
-    font-size: 2rem;
+    /* font-size: 2rem; */
     /* height: 4rem; */
-    letter-spacing: -1px;
+    /* letter-spacing: -1px; */
     /* line-height: 4rem; */
     /* margin-left: -3rem; */
-    position: absolute;
+    /* position: absolute; */
     /* text-align: center; */
     /* width: 6rem; */
   }
