--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ body {
     font-family: Oswald;
     opacity: 0.8;
     text-align: center;
+    padding: 5%;
 }
 
 .arrow::before {
@@ -32,10 +33,9 @@ body {
     /* bottom: 2rem; */
     /* font-size: 2rem; */
     /* height: 4rem; */
-    /* letter-spacing: -1px; */
     /* line-height: 4rem; */
     /* margin-left: -3rem; */
-    /* position: absolute; */
+    position: absolute;
     /* text-align: center; */
     /* width: 6rem; */
   }
