--- a/main.css
+++ b/main.css
@@ -22,17 +22,16 @@ body {
     opacity: 0.8;
     text-align: center;
     padding: 5%;
-    position: relative;
 }
 
 .arrow::before {
     content: '╲╱';
     color: black;
     animation: bounce 1s ease infinite;
-    position: absolute;
+    /* position: absolute; */
 
     /* font-size: 2rem; */
-    /* height: 4rem; */
+    height: 4rem;
     /* line-height: 4rem; */
   }
   
