--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@
 /* background colors */
 body {
     background: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%);
+    background: linear-gradient(#000, #000) no-repeat center/2px 100%;
+
+
 }
 
 
