--- a/main.css
+++ b/main.css
@@ -32,8 +32,7 @@ body {
     color: black;
     animation: bounce 1s ease infinite;
     position: absolute;
-    left: 50%;
-
+    text-align: center;
     /* font-size: 2rem; */
     height: 4rem;
     /* line-height: 4rem; */
