--- a/main.css
+++ b/main.css
@@ -33,6 +33,10 @@ body {
     animation: bounce 2s ease infinite;
     position: absolute;
     font-size: 2rem;
+
+    /* center the element */
+    left: 50%;
+    margin-left: -3rem;
   }
   
   @keyframes bounce {
