--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ body {
     position: absolute;
     font-size: 2rem;
     padding: 5%;
+    margin-bottom: 2rem;
     /* center the element */
     left: 50%;
     margin-left: -2rem;
