--- a/main.css
+++ b/main.css
@@ -22,8 +22,8 @@ body {
     font-family: Oswald;
     opacity: 0.8;
     text-align: center;
-    padding: 5%;
-    margin-top: 3rem;
+    /* padding: 5%; */
+    margin-top: 5rem;
 }
 
 .arrow::before {
