--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
 #scroll_down {
     font-family: Oswald;
     text-align: center;
-    margin-top: 15rem;
+    margin-top: 50%;
 }
 /* #arrow_text {
     font-family: Oswald;
