--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
 #subname { font-size: 200%;}
 
 #scroll_down {
-    font-family: Oswald;
+    font-family: "Oswald";
     text-align: center;
     margin-top: 15rem;
 }
