--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
 #subname { font-size: 200%;}
 
 #scroll_down {
+    font-family: "Oswald";
     margin-top: 9rem;
     text-align: center;
 }
@@ -44,7 +45,7 @@ body {
     border: none;
     outline: none;
     text-align: center;
-    font-family: "Oswald";
+    /* font-family: "Oswald"; */
     font-size: 2rem;
 }
 
