--- a/main.css
+++ b/main.css
@@ -53,6 +53,9 @@ nav {
     justify-content: space-between;
     position: fixed;
     text-justify: center;
+
+    /* center the element */
+    left: 50%;
 }
 
 a {
