--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ nav {
     font-family: "Oswald";
     justify-content: space-between;
     position: fixed;
-    background-color: bisque;
+    background-color: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%);
     /* center the element */
     left: 50%;
 }
