--- a/main.css
+++ b/main.css
@@ -53,8 +53,10 @@ nav {
     justify-content: space-between;
     position: fixed;
     background-color: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%);
+    
     /* center the element */
     left: 50%;
+    margin-left: -3rem;
 }
 
 nav a {
