--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 /* background colors */
 body {
     background: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%);
+    margin: 0px;
     /* background: linear-gradient(#000, #000) no-repeat center/2px 100%; */
 }
 
@@ -50,6 +51,7 @@ body {
 /* navigation bar */
 nav {
     font-family: "Oswald";
+    font-size: 100%;
     justify-content: space-between;
     position: fixed;
     background-color: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%);
