--- a/main.css
+++ b/main.css
@@ -52,7 +52,8 @@ body {
 nav {
     font-family: "Oswald";
     font-size: 100%;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    padding: 10%;
     /* position: fixed; */
     background-color: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%);
     
