--- a/main.css
+++ b/main.css
@@ -50,6 +50,8 @@ body {
     background: transparent;
     /* border: none; */
     outline: none;
+    width: 100%;
+    height: 100%;
 }
 
 /* navigation bar */
