--- a/main.css
+++ b/main.css
@@ -63,7 +63,7 @@ nav {
     /* padding: 10%; */
     position: fixed;
     width: 100%;
-    /* background-color: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%); */
+    background-color: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, darkseagreen 86%, sandybrown 100%);
     
     /* center the element */
     /* left: 50%; */
