--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body {
     font-family: "Oswald";
     margin-top: 9rem;
     text-align: center;
+    opacity: 0%;
 }
 
 #arrow {
@@ -63,7 +64,7 @@ nav {
     
     /* center the element */
     left: 50%;
-    margin-left: -10rem;
+    margin-left: -15rem;
 }
 
 nav a {
