--- a/main.css
+++ b/main.css
@@ -23,7 +23,13 @@ body {
     font-family: "Oswald";
     margin-top: 9rem;
     text-align: center;
-    opacity: 0%;
+}
+
+#scroll_button {
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 5%;
 }
 
 #arrow {
@@ -47,12 +53,11 @@ body {
     }
 }
 
-#scroll_button {
-    background: transparent;
-    /* border: none; */
-    outline: none;
-    width: 5%;
+#arrow_text {
+    font-size: 2rem;
 }
+
+
 
 /* navigation bar */
 nav {
