--- a/main.css
+++ b/main.css
@@ -12,9 +12,8 @@ nav {
     font-family: "Oswald";
     font-size: 120%;
     position: fixed;
-    /* width: 200%; */
+    width: 200%;
     background-color: white;
-    display: inline;
     
     /* center the element */
     left: 50%;
