--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
     font-size: 120%;
     position: fixed;
     text-align: center;
-    /* width: 200%; */
+    width: 100%;
     background-color: white;
     
     /* center the element */
