--- a/main.css
+++ b/main.css
@@ -25,7 +25,10 @@ body {
 nav a {
     text-align: center;
     text-decoration: none;
-    padding: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     color: grey;
     display: inline-block;
 }
