--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ nav a {
     padding-top: 0.75%;
     padding-bottom: 0.75%;
     color: grey;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 nav a:hover {
