--- a/main.css
+++ b/main.css
@@ -23,8 +23,8 @@ nav a {
     text-decoration: none;
     padding-left: 2%;
     padding-right: 2%;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-top: 1%;
+    padding-bottom: 1%;
     color: grey;
     /* display: inline-block; */
 }
