--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ nav a:hover {
   
 @keyframes bounce {
     50% {
-        transform: translateY(-50%);
+        transform: translateY(+50%);
     }
 }
 
