--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ nav a:hover {
     background: transparent;
     /* border: none; */
     outline: none;
-    width: 5%;
+    width: 5rem;
     top: -5rem;
 }
 
@@ -79,7 +79,7 @@ nav a:hover {
 }
 
 #arrow_text {
-    font-size: 5rem;
+    font-size: 130%;
     opacity: 0%;
 }
 
