--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ nav a:hover {
 
 #scroll_button {
     background: transparent;
-    /* border: none; */
+    border: none;
     outline: none;
     width: 5rem;
     top: -5rem;
