--- a/main.css
+++ b/main.css
@@ -7,6 +7,30 @@ body {
     /* background: linear-gradient(#000, #000) no-repeat center/2px 100%; */
 }
 
+/* scroll indicator */
+/* Style the header: fixed position (always stay at the top) */
+.header {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    background-color: white;
+}
+  
+/* The progress container (grey background) */
+.progress-container {
+    width: 100%;
+    height: 8px;
+    background: white;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+    height: 8px;
+    background: ivory;
+    width: 0%;
+}
+
 /* navigation bar */
 #navbar {
     font-family: "Oswald";
