--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ nav a:hover {
 
 #scroll_button {
     background: transparent;
-    border: none;
+    /* border: none; */
     outline: none;
     width: 5rem;
     top: -5rem;
@@ -97,7 +97,7 @@ nav a:hover {
   
 @keyframes bounce {
     50% {
-        transform: translateY(+50%);
+        transform: translateY(-50%);
     }
 }
 
