--- a/main.css
+++ b/main.css
@@ -76,11 +76,9 @@ nav a:hover {
     background: transparent;
     /* border: none; */
     outline: none;
-    width: 5rem;
-    height: 10rem;
     position: relative;
-    left: 50%;
-
+    /* width: 5rem;
+    height: 10rem; */
     /* margin-top: -5px; */
 }
 
