--- a/main.css
+++ b/main.css
@@ -77,6 +77,8 @@ nav a:hover {
     /* border: none; */
     outline: none;
     position: relative;
+    width: 10%;
+    height: 10%;
     /* width: 5rem;
     height: 10rem; */
     /* margin-top: -5px; */
