set height as px?

--- a/main.css
+++ b/main.css
@@ -78,8 +78,8 @@ nav a:hover {
     /* border: none; */
     outline: none;
     position: relative;
-    width: 5%;
-    height: 10%;
+    width: 8%;
+    height: 100px;
     /* width: 5rem;
     height: 10rem; */
     /* margin-top: -5px; */
