--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ nav a:hover {
     height: 100px;
     /* width: 5rem;
     height: 10rem; */
-    /* margin-top: -5px; */
+    margin-top: 1rem;
 }
 
 #arrow {
