--- a/main.css
+++ b/main.css
@@ -77,12 +77,12 @@ nav a:hover {
     background: transparent;
     /* border: none; */
     outline: none;
-    position: relative;
+    text-align: center;
+    /* position: relative;
     width: 8%;
-    height: 100px;
-    /* width: 5rem;
-    height: 10rem; */
-    margin-top: 1rem;
+    height: 50%; */
+    /* height: 10rem;  */
+    /* margin-top: 1rem; */
 }
 
 #arrow {
