--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 /* background colors */
 body {
-    background: -webkit-linear-gradient(top, bisque 16%, pink 35%, powderblue 55%, plum 75%, sandybrown 100%);
+    background: -webkit-linear-gradient(top, bisque 16%, beige);
     margin: 0px;
 }
 
