--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 /* background colors */
 body {
-    background: -webkit-linear-gradient(top, bisque 16%, beige);
+    background: -webkit-linear-gradient(top, bisque 16%, #f8f8ff 100%);
     margin: 0px;
 }
 
