--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 /* background colors */
 body {
-    background: -webkit-linear-gradient(top, bisque 100vh, #f8f8ff 120vh);
+    background: -webkit-linear-gradient(top, bisque 100vh, #fff4e6 120vh);
     margin: 0px;
 }
 
