--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@
     src: url("/fonts/Autumn\ Chant.otf") format("opentype");
 }
 
+@font-face {
+    font-family: "Deanna";
+    src: url("/fonts/Deanna.ttf") format("truetype");
+}
 
 /* background colors */
 body {
@@ -119,7 +123,8 @@ nav a:hover {
 /* text & images */ 
 
 p{
-    font-family: Roboto Slab;
+    /* font-family: Roboto Slab; */
+    font-family: Deanna;
     font-size: 110%;
     padding: 5%;
     margin-top: 13%;
