--- a/main.css
+++ b/main.css
@@ -71,14 +71,10 @@ nav a:hover {
 #scroll_button {
     display: inline-block;
     background: transparent;
-    /* border: none; */
+    border: none;
     outline: none;
     text-align: center;
-    /* position: relative;
-    width: 8%;
-    height: 50%; */
-    /* height: 10rem;  */
-    /* margin-top: 1rem; */
+
     color: black;
     animation: bounce 3s ease infinite; 
     position: absolute;
@@ -89,23 +85,10 @@ nav a:hover {
     margin-left: -2rem;
 }
 
-#scroll_button: hover {
+#scroll_button:hover {
     color: darkgrey;
 }
-#arrow {
-    color: black;
-    animation: bounce 3s ease infinite; 
-    position: absolute;
-    font-size: 2rem;
 
-    /* center the element */
-    left: 50%;
-    margin-left: -2rem;
-}
-
-#scroll_button:hover #arrow {
-    color: darkgrey;
-}
   
 @keyframes bounce {
     50% {
