--- a/main.css
+++ b/main.css
@@ -31,9 +31,10 @@ body {
     font-family: "Oswald";
     font-size: 120%;
     position: fixed;
-    text-align: center;
+    text-align: right;
     width: 100%;
-    background-color: white;
+    /* background-color: white; */
+    background-blend-mode: initial;
     top: 0px;
     /* opacity: 0; */
 }
