--- a/main.css
+++ b/main.css
@@ -33,10 +33,9 @@ body {
     position: fixed;
     text-align: right;
     width: 100%;
-    background-blend-mode: initial;
-    mix-blend-mode: initial;
+    background-blend-mode: color;
+    /* mix-blend-mode: initial; */
     top: 0px;
-    opacity: 1;
 }
 
 nav a {
